--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/resources/css/base.css=UTF-8
+encoding//src/main/webapp/WEB-INF/views/theater/theater_main.jsp=UTF-8
